chore: install vue-tsc

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cz-git": "^1.8.0",
     "nuxt": "^3.8.2",
     "vue": "^3.3.10",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tsc": "^1.8.25"
   }
 }
