--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "cz-git": "^1.8.0",
     "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "nuxt": "^3.8.2",
+    "prettier": "^3.1.1",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.25"
