--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "nuxt": "^3.8.2",
+    "nuxt-icon": "^0.6.7",
     "pinia": "^2.1.7",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
