--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "lint": "eslint --ext .ts,.js,.vue .",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint --ext .ts,.js,.vue .",
+    "preview": "nuxt preview"
   },
   "config": {
     "commitizen": {
@@ -32,6 +32,9 @@
     "nuxt-icon": "^0.6.7",
     "pinia": "^2.1.7",
     "prettier": "^3.1.1",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-packagejson": "^2.4.7",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5",
