--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-packagejson": "^2.4.7",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "sass": "^1.69.5",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.25"
