--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue-tsc": "^1.8.25"
   },
   "dependencies": {
+    "@nuxt/image": "^1.1.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2"
   }
