--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.7.0",
     "@vueuse/nuxt": "^10.7.0",
+    "bootstrap": "^5.3.2",
     "cz-git": "^1.8.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
@@ -40,7 +41,6 @@
     "vue-tsc": "^1.8.25"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2"
+    "@popperjs/core": "^2.11.8"
   }
 }
