--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.1.0",
-    "@popperjs/core": "^2.11.8"
+    "@popperjs/core": "^2.11.8",
+    "@vee-validate/i18n": "^4.12.4",
+    "@vee-validate/nuxt": "^4.12.4",
+    "@vee-validate/rules": "^4.12.4",
+    "vee-validate": "^4.5.8"
   }
 }
