--- a/package.json
+++ b/package.json
@@ -8,12 +8,25 @@
     "generate": "nuxt generate",
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext .ts,.js,.vue .",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "start": "node .output/server/index.mjs"
   },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-git"
     }
+  },
+  "dependencies": {
+    "@nuxt/image": "^1.2.0",
+    "@popperjs/core": "^2.11.8",
+    "@vee-validate/i18n": "^4.12.4",
+    "@vee-validate/nuxt": "^4.12.4",
+    "@vee-validate/rules": "^4.12.4",
+    "dayjs": "^1.11.10",
+    "docker": "^0.2.14",
+    "sweetalert2": "^11.6.13",
+    "validator": "^13.11.0",
+    "vee-validate": "^4.5.8"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.6",
@@ -28,27 +41,17 @@
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "nuxt": "^3.8.2",
-    "nuxt-icon": "^0.6.7",
+    "nuxt": "^3.10.0",
+    "nuxt-icon": "^0.6.8",
     "pinia": "^2.1.7",
     "prettier": "^3.1.1",
     "prettier-plugin-organize-attributes": "^1.0.0",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-packagejson": "^2.4.7",
     "sass": "^1.69.5",
+    "sharp": "^0.33.2",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.25"
-  },
-  "dependencies": {
-    "@nuxt/image": "^1.1.0",
-    "@popperjs/core": "^2.11.8",
-    "@vee-validate/i18n": "^4.12.4",
-    "@vee-validate/nuxt": "^4.12.4",
-    "@vee-validate/rules": "^4.12.4",
-    "dayjs": "^1.11.10",
-    "sweetalert2": "^11.6.13",
-    "validator": "^13.11.0",
-    "vee-validate": "^4.5.8"
   }
 }
